chapter03/step03/ingress.yaml
# 기존 노드포트와는 달리, 
# http를 처리하기 위해 30100번 포트로 들어온 요청을 80포트로 넘긴다.
# https를 처리하기 위해 30101번 포트로 들어온 요청을 443포트로 넘긴다.
# NGINX 인그레스 컨트롤러가 위치하는 네임스페이스를 ingress-nginx로 지정
# NGINX 컨트롤러 요구 사항에 따라 셀렉터를 ingress-nginx로 지정

apiVersion: v1
kind: Service
metadata:
  # 서비스 이름
  name: nginx-ingress-controller
  # 네임스페이스 이름
  namespace: ingress-nginx
spec:
  # 사용할 프로토콜과 포트들을 지정
  ports:
    # http에 대한 프로토콜 및 포트 지정
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30100
    # https에 대한 프로토콜 및 포트 지정
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30101
  # 셀렉터의 레이블 지정
  selector:
    app.kubernetes.io/name: ingress-nginx
  # 서비스 타입 설정
  type: NodePort
